<resources>
    <string name="app_name">MealsPlanner</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_grocery_list">Create</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_meals">Meals</string>
    <string name="filter_meals">Filter</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_hint">yyyy-mm-dd hh:mm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="household_card">manage households</string>
    <string name="meal_card">browse meals</string>
    <string name="recipe_card">browse recipes</string>
    <string name="grocery_card">grocery list</string>
    <string name="main_menu">Main Menu</string>
    <string name="households_fragment_title">Households</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="users">Users</string>
    <string name="add_user">Add User</string>
    <string name="create_household">Create Household</string>
    <string name="owner">Owner</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="by_email">By Email</string>
    <string name="by_username">By Username</string>
    <string name="title_activity_example_login">ExampleLoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>