<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.LandingFragment">

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:background="@color/teal_200">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="194dp"
            android:layout_height="195dp"
            android:contentDescription="TODO"
            android:src="@mipmap/food_icon_foreground" />

        <TextView
            android:id="@+id/textView"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>